# kdaemon-sdk

./: .gitignore  Config.in  Makefile  README.md  longdong.mk  userguide_zh-TW.md
lang/python/python3-awscrt/: Makefile
lang/python/python3-awscrt/patches/: 100-fika-cross-compile-aarch64.patch
lang/python/python3-awsiotsdk/: Makefile
libs/aws-iot-device-sdk-cpp/: Makefile
libs/aws-iot-device-sdk-cpp/patches/: 100-fika-fix-warning-be-error.patch
libs/aws-iot-device-sdk-embedded-C/: 1000-fika-fcntl.patch  Config.in  Makefile  aws-iot-sdk-c.mk
libs/fika-mbedtls/: Makefile
libs/fika-redis/: Config.in  Makefile  fika-redis.mk  redis.service
libs/fika-redis/files/: fika_redis.conf  redis.init.buildroot
libs/jaq/src/jaq/src/: main.rs
libs/tomato/src/: Cargo.toml
libs/tomato/src/src/: bash.rs  main.rs
net/fika-easy-setup/: Config.in  fika-easy-setup.mk
net/fika-easy-setup/files/: fika-easy-setup.hotplug  fika-easy-setup.init
net/fika-easy-setup/src/: Cargo.toml  Makefile
net/fika-easy-setup/src/certs/: cert.pem  key.pem
net/fika-easy-setup/src/shadow-rs/: Cargo.toml
net/fika-easy-setup/src/shadow-rs/src/: lib.rs
net/fika-easy-setup/src/src/: fas.rs  kap_boss.rs  kap_daemon.rs  lib.rs  main.rs  server_ctx.rs
net/fika-easy-setup/src/templates/: easy_setup.html  login.html  opennds_fas.html  pairing.html  pairing_only.html  por.html  result.html
net/fika-iot-gateway/: 1000-buildroot.patch  Config.in  Makefile  fika-iot-gateway.mk
net/fika-iot-gateway/files/: MVP_000001-certificate.pem.crt  MVP_000001-private.pem.key  config.yaml.sample  e749408131b357ef9e051f31ffe661540480ff7269fe88f62bc86bc1e4020787-certificate.pem.crt  e749408131b357ef9e051f31ffe661540480ff7269fe88f62bc86bc1e4020787-private.pem.key  e749408131b357ef9e051f31ffe661540480ff7269fe88f62bc86bc1e4020787-public.pem.key  fika-iot-gateway.hotplug  fika_iot_gateway.init  fika_iot_gateway.yaml
net/fika-iot-gateway/src/: CMakeLists.txt  README.md  aws_callback.c  aws_callback.h  config.c  config.h  helpers.c  helpers.h  list.h  main.c  redis_callback.c  redis_callback.h
net/fika-opennds/: 1000-fika-http-query-seperator.patch  Config.in  Makefile  fika-opennds.mk
net/fika-opennds/files/: opennds
net/fika-opennds/files/buildroot/etc/hotplug.d/iface/: 96-fika-opennds
net/fika-opennds/files/buildroot/etc/init.d/: fika-opennds
net/fika-opennds/files/buildroot/etc/opennds/: longdong.conf
net/fika-opennds/files/buildroot/usr/lib/opennds/: get_client_interface.sh
system/fika-manager/: Config.in  fika-manager.mk
system/fika-manager/files/: 97-fika-manager.hotplug  activate.toml.sample  activation.sh  bootstrap-inactive.certificate.pem  bootstrap-inactive.private.key  bootstrap-inactive.public.key  bootstrap-online-ap.certificate.pem  bootstrap-online-ap.private.key  bootstrap-online-ap.public.key  bootstrap-online-ap.result  bootstrap-sdk.certificate.pem  bootstrap-sdk.private.key  bootstrap-sdk.public.key  boss_ap_info.sh  boss_token.sh  captive-portal.sh  cmp_ap_info.sh  cmp_remote_manage.sh  common.sh  config.toml  config.toml.sample  easy_setup.sh  factory.toml  factory.toml.sample  fake.sh  fika-manager.init  hcs_honest_challenge.sh  heartbeat.sh  kdaemon.toml.sample  maker.sh  misc.sh  nms_remote_manage.sh  por_config.sh  provision.sh  recovery.toml.sample  remote_manage.sh  rule.toml.sample  runtime_statistics.sh  system_checking.sh  thirdparty
system/fika-manager/files/factory/: post_boss.sh  post_cmp.sh  post_core.sh  post_por.sh  post_wifi_ssid_by_uci.sh  pre_cmp.sh  pre_core.sh
system/fika-manager/files/longdong2/: firewall.sh  network.sh  system.sh
system/fika-manager/src/: Cargo.toml  config.toml
system/fika-manager/src/aws-iot-device-sdk-rust/: Cargo.toml
system/fika-manager/src/aws-iot-device-sdk-rust/src/: client.rs
system/fika-manager/src/src/: activate.rs  aws_iot.rs  daemon.rs  honest-challenge.rs  kap_boss.rs  kap_cmp.rs  kap_core.rs  kap_daemon.rs  kap_ez.rs  kap_rule.rs  lib.rs  main.rs  misc.rs  mqtt_client.rs  mqtt_error.rs  publish_task.rs  recovery.rs  subscribe_task.rs
