[package]
name = "fika-easy-setup"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
axum = { version = "0.5.7", features = ["headers"] }
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
oauth2 = "4.1"
async-session = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
headers = "0.3"
http = "0.2"
qrcode = { version = "0.12.0", default-features = false, features = ["svg", "image"] }
redis = { version = "0.21.5", features = ["tokio-comp", "aio"] }
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
axum-extra = { version = "0.3.4", features = ["spa"] }
emojis = "0.4.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
futures-util = "0.3.21"
nix = { version = "0.24.1", features = ["user"] }
shadow = { path = "shadow-rs" }
pwhash = "1.0.0"
chrono = "0.4.19"
fastrand = "1.7.0"
axum-macros = "0.2.3"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
base64 = "0.13.0"
serde_qs = "0.10.1"
sha2 = "0.10.2"
online = { git = "https://github.com/jesusprubio/online", rev = "1ba43a7" }
toml = "0.5.9"
