[package]
name = "fika-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fika-manager"
path = "src/main.rs"

[features]
default = ["boss-api"]
boss-api = ["reqwest"]
wallet = ["ethers"]

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
bytes = "1.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "^3.2.5", features = ["derive"] }
fastrand = "1.7.0"
futures-util = "0.3.21"
mqtt4bytes = "0.4.0"
process-stream = "0.2.3"
redis = { version = "0.21.5", features = ["tokio-comp"] }
rumqttc = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
aws-iot-device-sdk-rust = { path = "aws-iot-device-sdk-rust" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"], optional = true }
ethers = { git = "https://github.com/gakonst/ethers-rs", optional = true }
