[package]
name = "fika-manager"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fika-manager"
path = "src/main.rs"

[features]
default = ["boss-api", "wallet"]
boss-api = []
wallet = []

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
bytes = "1.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "^3.2.5", features = ["derive"] }
fastrand = "1.7.0"
futures-util = "0.3.21"
process-stream = "0.2.3"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-futures = "0.2.5"
atty = "0.2.14"
colored_json = "3.0.1"
fika-utils = { git = "https://github.com/koralden/fika-utils.rs.git", rev = "ac87105a", features = ["boss-api", "aws-iot", "wallet"] }
